# Multi-Agent-Intelligence-Engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
docs/: foundation.md  governance-evaluation-iac.md  live-demo.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  render-deploy.md  runtime-architecture.md  service-delivery.md
examples/: risk_assessment_request.json
examples/evals/: benchmark_cases.json  workflow_eval_cases.json
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
knowledge/financial-services/: escalation-policy.md  supplier-risk-playbook.md
src/maie/: __init__.py  __main__.py  main.py
src/maie/agents/: __init__.py  base.py  specialists.py
src/maie/api/: __init__.py  app.py  cli.py  contracts.py
src/maie/application/: __init__.py  workflow_service.py
src/maie/checkpoints/: __init__.py  store.py
src/maie/core/: __init__.py  config.py
src/maie/demo/: __init__.py  cli.py  server.py  service.py
src/maie/domain/: __init__.py  models.py
src/maie/evaluation/: __init__.py  benchmark.py  cli.py  contracts.py  harness.py
src/maie/governance/: __init__.py  policies.py
src/maie/graph/: __init__.py  builder.py  state.py
src/maie/knowledge/: __init__.py  documents.py  (+1 more)
tests/: test_api_contracts.py  test_benchmark.py  test_checkpoints.py  test_delivery_assets.py  test_demo_assets.py  test_demo_server.py  test_demo_service.py  test_engine.py  test_evaluation_harness.py  test_governance.py  test_knowledge_retriever.py  test_policy.py  test_providers.py  test_registry.py  test_simulation.py  test_state_store.py  test_terraform_assets.py  test_workflow_service.py
(+22 files in other folders)
